Category done and Admin can add, update, soft delete is done